--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -131,7 +131,7 @@
   border:1px solid rgba(15,78,199,.06);
 }
 
-/* 🔹 Homologar tamaño de logos en carrusel */
+/* Homologar tamaño de logos en carrusel */
 .uniform-logo {
   height: 40px;
   max-height: 40px;
