--- a/src/pages/ReclutamientoNative.css
+++ b/src/pages/ReclutamientoNative.css
@@ -138,10 +138,10 @@
 }
 
 .mb-3 {
-  text-align: ceneter; 
+  text-align: center; 
   color: #ffff;
 }
 
-.mt-5 text-center{
+.mt-5 {
 color: #ffff;
 }
